MDEV-6287 Bad warning level when inserting a DATETIME value into a TIME column